<resources>
    <string name="app_name">TasteNews</string>
    <string name="action_setting">设置</string>
    <string name="voice_open">开启语音控制</string>
    <string name="voice_close">关闭语音控制</string>
    <string name="theme_day">白天模式</string>
    <string name="theme_night">夜晚模式</string>
    <string name="name">看些什么</string>
    <string name="navigation_news">新闻</string>
    <string name="navigation_weather">天气</string>
    <string name="navigation_about">关于</string>
    <string name="navigation_images">趣图</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>

    <string name="app_description">本APP采用Material Design以及MVP设计模式在项目中的使用</string>
    <string name="app_github_url">APP引用资源：今日头条数据，百度定位，天气预报</string>
    <string name="author">参考大牛：Lauren</string>
    <string name="email">我的邮箱：1198960858@qq.com</string>
    <string name="blog">我的博客：to be done</string>

    <string name="top">头条</string>
    <string name="nba">NBA</string>
    <string name="cars">汽车</string>
    <string name="jokes">笑话</string>

    <string name="jingxuan">精选</string>
    <string name="qutu">趣图</string>
    <string name="meitu">美图</string>
    <string name="story">故事</string>

    <string name="load_fail">加载数据失败!</string>
    <string name="title_activity_news_detail">NewsDetailActivity</string>

    <string name="image_hit">一次只加载20条，查看更多内容请刷新哦。</string>

    <string name="login_fail">登录失败，请检查自己的用户名和密码！</string>

    <string name="register_success">注册成功！</string>
    <string name="register_failure">注册失败，请重试！</string>

    <string name="add_comment">尽情书写你的观点吧！</string>
    <string name="comment">评论</string>
    <string name="loading">Loading.....</string>
    <string name="user">账号</string>
    <string name="password">密码</string>

    <string name="jump_to_news">查看更多。。。</string>

    <string name="fab_ask_question">提问</string>
    <string name="fab_see_comment">评论区</string>
    <string name="fab_ask_question_main">问题 : </string>
    <string name="fab_ask_question_description">描述</string>

    <string name="cofig">设置</string>
    <string name="floating_switch">悬浮窗模式</string>
        <!-- 请替换成在语音云官网申请的appid -->
        <string name="app_id">579db503</string>
        <string name="example_explain">本示例为讯飞语音Android平台开发者提供语音听写、语法识别、语义理解和语音合成等代码样例，旨在让用户能够依据该示例快速开发出基于语音接口的应用程序。</string>
        <string name="text_tts_source">科大讯飞作为中国最大的智能语音技术提供商，在智能语音技术领域有着长期的研究积累，并在中文语音合成、语音识别、口语评测等多项技术上拥有国际领先的成果。科大讯飞是我国唯一以语音技术为产业化方向的“国家863计划成果产业化基地”…</string>
        <string name="text_tts_source_en">iFLYTEK is a national key software enterprise dedicated to the research of intelligent speech and language technologies, development of software and chip products, provision of speech information services, and integration of E-government systems. The intelligent speech technology of iFLYTEK, the core technology of the company, represents the top level in the world.</string>
        <string name="text_isr_abnf_hint">\t上传内容为：\n\t#ABNF 1.0 gb2312;\n\tlanguage zh-CN;\n\tmode voice;\n\troot $main;\n\t$main = $place1 到$place2 ;\n\t$place1 = 北京 | 武汉 | 南京 | 天津 | 东京;\n\t$place2 = 上海 | 合肥;</string>
        <string name="text_understand_hint">\t您可以说：\n\t今天的天气怎么样?\n\t北京到上海的火车?\n\t有什么好吃的?\n\t上海外滩有哪些酒店?\n\n\t更多语义请登录：\n\thttp://osp.voicecloud.cn/ \n\t配置您的专属语义吧!</string>
        <!-- 听写 -->
        <string name="text_begin">请开始说话…</string>
        <string name="text_begin_recognizer">开始音频流识别</string>
        <string name="text_upload_contacts">上传联系人</string>
        <string name="text_upload_userwords">上传用户词表</string>
        <string name="text_upload_success">上传成功</string>
        <string name="text_userword_empty">词表下载失败或内容为空</string>
        <string name="text_download_success">下载成功</string>
        <string name="pref_key_iat_show">iat_show</string>
        <string name="pref_title_iat_show">显示听写界面</string>
        <string name="pref_title_iat_dwa">结果动态修正</string>

        <!-- 合成 -->
        <string-array name="engine_entries">
            <item>本地合成</item>
            <item>在线合成</item>
        </string-array>
        <string-array name="engine_values">
            <item>local</item>
            <item>cloud</item>
        </string-array>
        <string-array name="voicer_cloud_entries">
            <item>小燕—女青、中英、普通话</item>
            <item>小宇—男青、中英、普通话</item>
            <item>凯瑟琳—女青、英</item>
            <item>亨利—男青、英</item>
            <item>玛丽—女青、英</item>
            <item>小研—女青、中英、普通话</item>
            <item>小琪—女青、中英、普通话</item>
            <item>小峰—男青、中英、普通话</item>
            <item>小梅—女青、中英、粤语</item>
            <item>小莉—女青、中英、台湾普通话</item>
            <item>小蓉—女青、中、四川话</item>
            <item>小芸—女青、中、东北话</item>
            <item>小坤—男青、中、河南话</item>
            <item>小强—男青、中、湖南话</item>
            <item>小莹—女青、中、陕西话</item>
            <item>小新—男童、中、普通话</item>
            <item>楠楠—女童、中、普通话</item>
            <item>老孙—男老、中、普通话</item>
        </string-array>
        <string-array name="voicer_cloud_values">
            <item>xiaoyan</item>
            <item>xiaoyu</item>
            <item>catherine</item>
            <item>henry</item>
            <item>vimary</item>
            <item>vixy</item>
            <item>xiaoqi</item>
            <item>vixf</item>
            <item>xiaomei</item>
            <item>xiaolin</item>
            <item>xiaorong</item>
            <item>xiaoqian</item>
            <item>xiaokun</item>
            <item>xiaoqiang</item>
            <item>vixying</item>
            <item>xiaoxin</item>
            <item>nannan</item>
            <item>vils</item>
        </string-array>
        <string-array name="emot_entries">
            <item>正常</item>
            <item>高兴</item>
            <item>悲伤</item>
            <item>生气</item>
        </string-array>
        <string-array name="emot_values">
            <item>neutral</item>
            <item>happy</item>
            <item>sad</item>
            <item>angry</item>
        </string-array>
        <string-array name="stream_entries">
            <item>通话</item>
            <item>系统</item>
            <item>铃声</item>
            <item>音乐</item>
            <item>闹铃</item>
            <item>通知</item>
        </string-array>
        <string-array name="stream_values">
            <item>0</item>
            <item>1</item>
            <item>2</item>
            <item>3</item>
            <item>4</item>
            <item>5</item>
        </string-array>
        <string formatted="false" name="tts_toast_format">缓冲进度为%d%%，播放进度为%d%%</string>
        <!-- 语言 -->
        <string-array name="language_entries">
            <item>普通话</item>
            <item>粤语</item>
            <item>河南话</item>
            <item>英语</item>
        </string-array>
        <string-array name="language_values">
            <item>mandarin</item>
            <item>cantonese</item>
            <item>henanese</item>
            <item>en_us</item>
        </string-array>
        <!-- 语音评测 -->
        <string name="text_en_word">"[word]\napple\nbanana\norange"</string>
        <string name="text_en_sentence">"The quick brown fox jumps over the lazy dog."</string>
        <string name="text_cn_syllable">"知，痴，是"</string>
        <string name="text_cn_word">"磁铁，率领，脆弱，动手，古筝"</string>
        <string name="text_cn_sentence">"一座座雪峰插入云霄，峰顶银光闪闪，大大小小的湖泊，像颗颗宝石镶嵌在彩带般的沟谷中。"</string>
        <string-array name="ise_language_entries">
            <item>英语</item>
            <item>汉语</item>
        </string-array>
        <string-array name="ise_language_values">
            <item>en_us</item>
            <item>zh_cn</item>
        </string-array>
        <string-array name="category_entries">
            <item>单字</item>
            <item>词语</item>
            <item>句子</item>
        </string-array>
        <string-array name="category_values">
            <item>read_syllable</item>
            <item>read_word</item>
            <item>read_sentence</item>
        </string-array>
        <string-array name="result_level_entries">
            <item>plain</item>
            <item>complete</item>
        </string-array>
        <!-- 标点符号 -->
        <string-array name="punc_entries">
            <item>有标点</item>
            <item>无标点</item>
        </string-array>
        <string-array name="punc_values">
            <item>1</item>
            <item>0</item>
        </string-array>
        <string-array name="dwa_entries">
            <item>开启</item>
            <item>关闭</item>
        </string-array>

    <string name="MAP_API_KEY">"54e2460dd10a4f16e727cf1d5a8a7e71"</string>
    <string name="INTERESTING_PICTURE_KEY">629e1f8d61a44087a1507fb8dce0ed19</string>
    <string name="INTERESTING_PICTURE_APPID">23149</string>
</resources>

